src/styles/global.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

@custom-variant dark (&:where(.dark, .dark *));

@font-face {
	font-family: "Sentient-Variable";
	src: url("/fonts/Sentient-Variable.woff2") format("woff2");
	font-weight: 200 700;
	font-display: swap;
	font-style: normal;
}

@theme {
	/* Base Colors */
	--color-background: #ffffff;
	--color-foreground: #050505;
	--color-muted: #0a0a0a;
	--color-code: #24292e;
	--color-code-text: #f6f8fa;
	--color-border: #e5e7eb;
}

@layer theme {
	.dark {
		/* Base Colors */
		--color-background: #050505;
		--color-foreground: #fafafa;
		--color-muted: #cacaca;
		--color-code: #f6f8fa;
		--color-code-text: #24292e;
		--color-border: #4b5563;
	}
}

body {
	font-family: "Sentient-Variable", serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: "Sentient-Variable", sans-serif;
}

.info-list > *:not(:last-child)::after {
	content: "|";
	color: #aaaaaa;
}

.prose p > code,
.prose li > code,
.prose td > code,
.prose strong > code {
	background-color: var(--color-code);
	color: var(--color-code-text);
	padding: 0.2rem 0.4rem;
	margin: 0 0.2rem;
	border-radius: 0.375rem;
}

/* Shiki Theming */
.dark {
	.astro-code,
	.astro-code span {
		color: var(--shiki-dark) !important;
		background-color: var(--shiki-dark-bg) !important;
		font-style: var(--shiki-dark-font-style) !important;
		font-weight: var(--shiki-dark-font-weight) !important;
		text-decoration: var(--shiki-dark-text-decoration) !important;
	}
}

/* Scrollbar styles */
* {
	scrollbar-width: thin;
	scrollbar-color: #525252 transparent;
}

/* Webkit scrollbar (Chrome, Safari, Edge) */
::-webkit-scrollbar {
	width: 6px;
	height: 6px;
}

::-webkit-scrollbar-track {
	background: transparent;
}

::-webkit-scrollbar-thumb {
	background: #525252;
	border-radius: theme(--radius-4xl);
}

::-webkit-scrollbar-thumb:hover {
	background: #737373;
}

